--- a/TicTacToeByBloodyAlpha/Pages/PlayerCountSelector.xaml
+++ b/TicTacToeByBloodyAlpha/Pages/PlayerCountSelector.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="TicTacToeByBloodyAlpha.Pages.MainMenu"
+﻿<Page x:Class="TicTacToeByBloodyAlpha.Pages.PlayerCountSelector"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,27 +6,27 @@
       xmlns:local="clr-namespace:TicTacToeByBloodyAlpha.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="MainMenu">
+      Title="PlayerCountSelector">
 
     <Grid>
         <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-            <Label Content="TicTacToe" HorizontalAlignment="Center" Foreground="White" FontWeight="Black" FontSize="24">
+            <Label Content="PlayerCount:" HorizontalAlignment="Center" Foreground="White" FontWeight="Black" FontSize="24">
                 <Label.Effect>
                     <DropShadowEffect Color="#FFD87F7F" />
                 </Label.Effect>
             </Label>
-            
-            <Button x:Name="Btn_StartGame" Foreground="White" Background="DarkRed" Height="48" Width="200" Content="Start Game" FontSize="20" FontWeight="Black" Click="Btn_StartGame_Click"  >
+
+            <Button x:Name="Btn_SoloGame" Foreground="White" Background="DarkRed" Height="48" Width="200" Content="OnePlayer" FontSize="20" FontWeight="Black" Click="Btn_SoloGame_Click"  >
                 <Button.Effect>
                     <DropShadowEffect BlurRadius="15"/>
                 </Button.Effect>
             </Button>
-            <Button x:Name="Btn_About" Foreground="White" Background="DarkRed" Height="48" Width="200" Content="About" FontSize="20" FontWeight="Black" Click="Btn_About_Click">
+            <Button x:Name="Btn_DuoGame" Foreground="White" Background="DarkRed" Height="48" Width="200" Content="TwoPlayer" FontSize="20" FontWeight="Black" Click="Btn_DuoGame_Click">
                 <Button.Effect>
                     <DropShadowEffect BlurRadius="15"/>
                 </Button.Effect>
             </Button>
-            <Button x:Name="Btn_Exit" Foreground="White" Background="DarkRed" Height="48" Width="200" Content="Exit" FontSize="20" FontWeight="Black" Click="Btn_Exit_Click">
+            <Button x:Name="Btn_Back" Foreground="White" Background="DarkRed" Height="48" Width="200" Content="Back" FontSize="20" FontWeight="Black" Click="Btn_Back_Click">
                 <Button.Effect>
                     <DropShadowEffect BlurRadius="15"/>
                 </Button.Effect>
